--- a/sic/templates/browse_tags.html
+++ b/sic/templates/browse_tags.html
@@ -21,7 +21,7 @@
     {% spaceless %}
         <ul class="tags" style="width: 80ch; max-width: 80vw;">
             {% for tag in tags %}
-                <li style="{{ tag.color_vars_css }}"><span class="tag-name"><a href="{% url_with_next 'edit_tag' tag.pk tag.slugify request %}">{{ tag.name }}</a> {{ tag.stories.count }}</span></li>
+                <li style="{{ tag.color_vars_css }}"><div class="tag"><span class="tag-name"><a href="{% url_with_next 'edit_tag' tag.pk tag.slugify request %}">{{ tag.name }}</a> {{ tag.stories.count }}</span></div></li>
             {% endfor %}
         </ul>
     {% endspaceless %}
