--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -36,7 +36,7 @@
         {% spaceless %}
             <header>
                 <div class="logo">
-                    <span>sic</span>
+                    <span><a href="{% url 'index' %}">sic</a></span>
                 </div>
                 <nav class="main menu">
                     <ul>
