--- a/sic/templates/profile.html
+++ b/sic/templates/profile.html
@@ -3,9 +3,9 @@
 {% block title %}{{user}} profile - sic{% endblock %}
 {% block content %}
     <div class="profile">
-        <div id="avatar">
+        <div id="avatar" style="width: max-content; background-image: url({{user.avatar|default_if_none:''}});">
             <figure id="avatar-thumbnail" style="width: max-content; background-image: url({{user.avatar|default_if_none:''}});">
-                {% if user.avatar %}<img src="{{ user.avatar }}" title="{{ user.avatar_title|default_if_none:''}}">{% else %}<div>None.</div>{% endif %}
+                {% if user.avatar %}<img src="{{ user.avatar }}" title="{{ user.avatar_title|default_if_none:''}}">{% else %}<div>No avatar.</div>{% endif %}
                 <figcaption>{{ user.avatar_title|default_if_none:"<em>No title.</em>" }}</figcaption>
             </figure>
         </div>
