Remove 2 new lines from base.html beginning

--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -1,6 +1,4 @@
-{% load utils %}
-{% load cache %}
-<!DOCTYPE html>
+{% load utils %}{% load cache %}<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
