--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -33,7 +33,7 @@
         </header>
         <a href="{{story.url}}">{{ story.url }}</a>
         {% if story.description %}
-            <div>{{ story.description_to_html }}</div>
+            <main>{{ story.description_to_html }}</main>
         {% endif %}
     </article>
     {% if request.user.is_authenticated %}
